# richlychee

./: .env.example  .gitignore  CLAUDE.md  FEATURES.md  OKR.md  README.md  docker-compose.yml  ddevRichlychee.gitignore  pyproject.toml  test_api.py  test_subscription_api.py
backend/: .env.example  Dockerfile  alembic.ini  init_presets.py  init_subscription_plans.py  pyproject.toml  write_migration.py
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  database.py  security.py
backend/app/dependencies/: subscription.py
backend/app/models/: __init__.py  crawl_job.py  crawl_preset.py  crawl_schedule.py  crawled_product.py  job.py  naver_credential.py  payment.py  price_history.py  product_result.py  subscription_plan.py  user.py  user_subscription.py
backend/app/routers/: auth.py  categories.py  crawl_jobs.py  crawled_products.py  credentials.py  files.py  jobs.py  payments.py  products.py  quick_crawl.py  subscriptions.py  users.py
backend/app/schemas/: auth.py  crawl_job.py  crawled_product.py  credential.py  job.py  payment.py  subscription.py  user.py
backend/app/services/: crawl_preset_service.py  email_service.py  naver_service.py  payment_service.py  price_monitor_service.py  subscription_service.py
backend/app/tasks/: celery_app.py  crawling.py  registration.py  scheduler.py
backend/app/templates/emails/: base.html  crawl_completed.html  crawl_failed.html  payment_failed.html  payment_success.html  registration_completed.html  usage_limit_reached.html  usage_warning.html
backend/config/: .env.example  settings.yaml
backend/richlychee/crawler/: __init__.py  base.py  dynamic.py  extractor.py  image_downloader.py  static.py
backend/richlychee/data/: models.py  reader.py
backend/richlychee/engine/: __init__.py  result.py
backend/richlychee/utils/: exchange_rate.py  logging.py
backend/templates/: sample_products.xlsx
backend/tests/: test_auth.py  test_validator.py
frontend/: .env.example  Dockerfile  package.json  tailwind.config.ts
richlychee/: __init__.py  __main__.py  config.py  main.py
scripts/: create_sample.py
session-logs/: 2026-02-12_프로젝트_초기_구현.md
tests/: conftest.py  (+2 more)
(+63 files in other folders)
