[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richlychee"
version = "0.1.0"
description = "네이버 스마트스토어 대량 상품 등록 CLI 도구"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "bcrypt>=4.1",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "responses>=0.24",
    "ruff>=0.3",
]

[project.scripts]
richlychee = "richlychee.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
