[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "richlychee"
version = "0.1.0"
description = "네이버 스마트스토어 대량 상품 등록 서비스"
requires-python = ">=3.11"
dependencies = [
    # CLI (기존)
    "requests>=2.31",
    "bcrypt>=4.1",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.7",
    "tenacity>=8.2",
    # FastAPI
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "passlib[bcrypt]>=1.7",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.5",
    "httpx>=0.27",
    # Celery
    "celery[redis]>=5.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "responses>=0.24",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
richlychee = "richlychee.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["richlychee", "app"]
